force-app/main/default/objects/Docusign_and_Contracts_Usage_Report__c/Docusign_and_Contracts_Usage_Report__c.object-meta.xml
<CustomObject>
    <description>Custom object to track usage related to Opportunities and contracts/DDPs that are created before sending it to customers using Docusign.</description>
    <label>Docusign and Contracts Usage Report</label>
    <nameField>
        <label>Docusign and Contracts Usage Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Docusign and Contracts Usage Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>