force-app/main/default/objects/Docusign_and_Contracts_Usage_Report__c/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <description>Date and Time a contract package was created by the user before sent via docusign.</description>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>