force-app/main/default/objects/Docusign_and_Contracts_Usage_Report__c/fields/Delivery_Option__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Option</label>
    <referenceTo>Loop__DDP_Integration_Option__c</referenceTo>
    <relationshipLabel>Docusign and Contracts Usage Reports</relationshipLabel>
    <relationshipName>Docusign_and_Contracts_Usage_Repo_del</relationshipName>
    <type>Lookup</type>
</CustomField>