force-app/main/default/objects/Docusign_and_Contracts_Usage_Report__c/fields/OppName__c.field-meta.xml
<CustomField>
    <fullName>OppName__c</fullName>
    <description>Opportunity name for which the contract was sent for.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Docusign and Contracts Usage Reports</relationshipLabel>
    <relationshipName>Docusign_and_Drawloop_Activity_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>