force-app/main/default/objects/Docusign_and_Contracts_Usage_Report__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>End user that created the contract package before sending it via docuSign.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Docusign_and_Drawloop_Activity_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>